--- a/grants.yml
+++ b/grants.yml
@@ -4,21 +4,24 @@ NRF:
   duration: 1~5년
   due: 2017.08.24
   note: 개인기초연구 1인1과제. 2018.08 과제 종료시 지원가능
-  link: https://www.nrf.re.kr/biz/info/notice/view?nts_no=93001&biz_no=354
+  link: https://www.nrf.re.kr/biz/info/notice/view?biz_no=354
+  form: https://www.nrf.re.kr/biz/info/notice/view?nts_no=93001&biz_no=354
 
 - title: X-프로젝트 신규과제 공모
   amount: 1억
   duration: 1+1년
   due: 2017.09.11
   note: 25가지 X-문제로 한정
-  link: https://www.nrf.re.kr/biz/info/notice/view?nts_no=93568&biz_no=354
+  link: https://www.nrf.re.kr/biz/info/notice/view?biz_no=354
+  form: https://www.nrf.re.kr/biz/info/notice/view?nts_no=93568&biz_no=354
 
 - title: 2017 전략과제 (인공지능 및 빅데이터)
   amount: 1~3억
   duration: 1~5년
   due: 2017.09.07
   note: 개인기초연구 1인1과제. 2018.08 과제 종료시 지원가능
-  link: https://www.nrf.re.kr/biz/info/notice/view?nts_no=93453&biz_no=354
+  link: https://www.nrf.re.kr/biz/info/notice/view?biz_no=354
+  form: https://www.nrf.re.kr/biz/info/notice/view?nts_no=93453&biz_no=354
 
 - title: 글로벌박사양성사업
   amount: 0.2억 + 등록금
@@ -26,7 +29,7 @@ NRF:
   due: 2017.04.25
   note: 박사과정 3학기 이내
   link: https://www.nrf.re.kr/biz/info/info/view?biz_no=202
-  form: https://www.nrf.re.kr/biz/info/notice/view?nts_no=88467&biz_no=202&search_type=&search_keyword=&page=
+  form: https://www.nrf.re.kr/biz/info/notice/view?nts_no=88467&biz_no=202
 
 ETC:
 - title: 국방핵심기술소요공모 순수기초연구
