--- a/grants.yml
+++ b/grants.yml
@@ -4,7 +4,7 @@ NRF:
   duration: 1~5년
   due: 2017.08.24
   note: 개인기초연구 1인1과제. 2018.08 과제 종료시 지원가능
-  link: https://www.nrf.re.kr/biz/info/notice/view?biz_no=354
+  link: https://www.nrf.re.kr/biz/info/info/view?biz_no=354
   form: https://www.nrf.re.kr/biz/info/notice/view?nts_no=93001&biz_no=354
 
 - title: X-프로젝트 신규과제 공모
@@ -12,7 +12,7 @@ NRF:
   duration: 1+1년
   due: 2017.09.11
   note: 25가지 X-문제로 한정
-  link: https://www.nrf.re.kr/biz/info/notice/view?biz_no=354
+  link: https://www.nrf.re.kr/biz/info/info/view?biz_no=354
   form: https://www.nrf.re.kr/biz/info/notice/view?nts_no=93568&biz_no=354
 
 - title: 2017 전략과제 (인공지능 및 빅데이터)
@@ -20,7 +20,7 @@ NRF:
   duration: 1~5년
   due: 2017.09.07
   note: 개인기초연구 1인1과제. 2018.08 과제 종료시 지원가능
-  link: https://www.nrf.re.kr/biz/info/notice/view?biz_no=354
+  link: https://www.nrf.re.kr/biz/info/info/view?biz_no=354
   form: https://www.nrf.re.kr/biz/info/notice/view?nts_no=93453&biz_no=354
 
 - title: 글로벌박사양성사업
