delete blank data

--- a/conference.yml
+++ b/conference.yml
@@ -3,7 +3,7 @@
   dateFrom: 2017/9/17
   dateUntil: 2017/9/19
   venue: Sitges, Spain
-  map: 
+  map: MT
   dueAbstract: 2017/06/09
   dueRegister: 
   presenter: 이병민
@@ -14,7 +14,7 @@
   dateFrom: 2017/9/27
   dateUntil: 2017/9/30
   venue: Salzburg, Austria
-  map: 
+  map: MT
   dueAbstract: 2017/05/31
   dueRegister: 
   presenter: 정지훈
