--- a/conference.yml
+++ b/conference.yml
@@ -5,7 +5,7 @@
   venue: Sitges, Spain
   map: MT
   dueAbstract: 2017/06/09
-  dueRegister: 
+  earlyRegister: 
   presenter: 이병민
   title: Development of volatile albumin platform targeting M2 microglial cell type via click chemistry
 
