--- a/conference.yml
+++ b/conference.yml
@@ -16,7 +16,7 @@
   venue: Salzburg, Austria
   map: MT
   dueAbstract: 2017/05/31
-  dueRegister: 
+  earlyRegister: 
   presenter: 정지훈
   title: Keap1 knockdown in melanocytes induces cell proliferation and survival via HO-1-associated β-catenin signaling
   
