--- a/conference.yml
+++ b/conference.yml
@@ -20,4 +20,13 @@
   presenter: 정지훈
   title: Keap1 knockdown in melanocytes induces cell proliferation and survival via HO-1-associated β-catenin signaling
   
+- meeting: Society for Neuroscience 2016
+  link: https://www.sfn.org/annual-meeting/neuroscience-2016
+  dateFrom: 2016/11/12
+  dateUntil: 2016/11/16
+  venue: San Diego, CA, USA 
+  map: https://goo.gl/maps/9HbNBP2Tbn62
+  dueAbstract: 2016/05/5
+  presenter: 정지훈,이병민
+  title: Heterogeneous expression of purinergic receptor subtypes in rat odontoblasts
   
