--- a/conference.yml
+++ b/conference.yml
@@ -78,5 +78,52 @@
   presenter: 정지훈
   title: Enhancement of INaP-mediated resonance by mGluR-I activation induces burst firing in mesencephalic trigeminal sensory neurons  
   
+- meeting: Society for Neuroscience 2013
+  link: http://www.sfn.org/annual-meeting/neuroscience-2013
+  dateFrom: 2013/11/09
+  dateUntil: 2013/11/13
+  venue: San Diego, CA, USA 
+  map: https://goo.gl/maps/9HbNBP2Tbn62
+  dueAbstract: 2013/05/09
+  presenter: 정지훈
+  title: Pharmacological action of eugenol involves rapid desensitization of TRPA1 
   
+- meeting: Society for Neuroscience 2012
+  link: http://www.sfn.org/Annual-Meeting/Past-and-Future-Annual-Meetings/2012
+  dateFrom: 2012/10/13
+  dateUntil: 2012/10/17
+  venue: New Orleans, USA 
+  presenter: 정지훈
+  title: Eugenol as a ligand for TRPA1 channel 
   
+- meeting: 91th General Session of International Association for Dental Research
+  link: http://www.iadr.org/i4a/pages/index.cfm?pageid=3312#.V4jg-JPhBE4
+  dateFrom: 2013/3/20
+  dateUntil: 2013/3/23
+  venue: Seattle, USA
+  map: 
+  presenter: 정지훈
+  title: Effect of Prostaglandin E1 on facilitating HCN channels in trigeminal ganglia 
+
+- meeting: Frontiers in Dental Sciences, 2013 Seoul-Beijing Joint Symposium
+  dateFrom: 2013/4/11
+  dateUntil: 2013/4/12
+  venue: Seoul, Korea
+  presenter: 정지훈
+  title: Activation of TRPA1 contributes to the pharmacological action of eugenol 
+
+- meeting: Federation of European Neurosciences Societies
+  link: http://fens2012.neurosciences.asso.fr/
+  dateFrom: 2012/7/14
+  dateUntil: 2012/7/18
+  venue: Barcelona, Spain  
+  presenter: 정지훈
+  title: Eugenol dependent activation of TRPA1 Channel 
+
+- meeting: 대한구강생물학회 춘계심포지움
+  link: http://www.kaob.or.kr/
+  dateFrom: 2012/6/7
+  venue: Seoul, Korea
+  presenter: 정지훈
+  title: Molecular mechanism underlying anesthetic action of eugenol 
+   
