--- a/conference.yml
+++ b/conference.yml
@@ -1,4 +1,11 @@
 - meeting: Cell Symposia:Neuro-Immune Axis
+  link: http://www.isscr.org/home/annual-meeting/isscr-2018-melbourne
+  dateFrom: 2018/06/20
+  dateUntil: 2018/06/23
+  venue: Melbourne, Australia
+  map: https://goo.gl/maps/48xSZG7HDGv
+
+- meeting: Cell Symposia:Neuro-Immune Axis
   link: http://cell-symposia.com/neuroimmunology-2017
   dateFrom: 2017/09/17
   dateUntil: 2017/09/19
