--- a/conference.yml
+++ b/conference.yml
@@ -1,4 +1,4 @@
-- meeting: Cell Symposia:Neuro-Immune Axis
+- meeting: ISSCR 2018 Annual Meeting
   link: http://www.isscr.org/home/annual-meeting/isscr-2018-melbourne
   dateFrom: 2018/06/20
   dateUntil: 2018/06/23
