--- a/conference.yml
+++ b/conference.yml
@@ -1,3 +1,34 @@
+- meeting: Society for Neuroscience 2018
+  link: https://www.sfn.org/annual-meeting/past-and-future-annual-meetings
+  dateFrom: 2018/11/03
+  dateUntil: 2018/11/07
+  venue: San Diego, CA, USA 
+  map: https://goo.gl/maps/9HbNBP2Tbn62
+  
+- meeting: 96th General Session of International Association for Dental Research
+  link: http://www.iadr.org/IADR/Meetings/2018IAGS
+  dateFrom: 2018/07/25
+  dateUntil: 2018/07/28
+  venue: London, UK
+  map: 
+  dueAbstract: 2018/02/02
+  earlyRegister: 2018/05/01
+
+- meeting: Federation of European Neurosciences Societies
+  link: http://forum2018.fens.org/
+  dateFrom: 2018/07/07
+  dateUntil: 2018/07/11
+  venue: Berlin, Germany  
+  map: https://goo.gl/maps/n6Ct2ABk8yB2
+  dueAbstract: 2018/02/13
+  earlyRegister: 2018/02/13
+
+- meeting: Organization for Computational Neurosciences
+  link: http://www.cnsorg.org/future-meetings
+  dateFrom: 2018/07/00
+  venue: Seattle, US 
+  map: 
+
 - meeting: ISSCR 2018 Annual Meeting
   link: http://www.isscr.org/home/annual-meeting/isscr-2018-melbourne
   dateFrom: 2018/06/20
