--- a/conference.yml
+++ b/conference.yml
@@ -25,9 +25,10 @@
 
 - meeting: Organization for Computational Neurosciences
   link: http://www.cnsorg.org/future-meetings
-  dateFrom: 2018/07/00
+  dateFrom: 2018/07/01
   venue: Seattle, US 
   map: 
+  title: 날짜 정확치 
 
 - meeting: ISSCR 2018 Annual Meeting
   link: http://www.isscr.org/home/annual-meeting/isscr-2018-melbourne
