--- a/conference.yml
+++ b/conference.yml
@@ -28,7 +28,7 @@
   dateFrom: 2018/07/01
   venue: Seattle, US 
   map: 
-  title: 날짜 정확치 
+  title: 날짜 확인요 
 
 - meeting: ISSCR 2018 Annual Meeting
   link: http://www.isscr.org/home/annual-meeting/isscr-2018-melbourne
