--- a/conference.yml
+++ b/conference.yml
@@ -25,7 +25,7 @@
 
 - meeting: Organization for Computational Neurosciences
   link: http://www.cnsorg.org/future-meetings
-  dateFrom: 2018/07/01
+  dateFrom: 2018/07
   venue: Seattle, US 
   map: 
   title: 날짜 확인요 
