--- a/conference.yml
+++ b/conference.yml
@@ -24,7 +24,7 @@
   earlyRegister: 2018/02/13
 
 - meeting: Organization for Computational Neurosciences
-  link: http://www.cnsorg.org/future-meetings
+  link: http://www.cnsorg.org/cns-2018
   dateFrom: 2018/07
   venue: Seattle, US 
   map: 
