대한생리학회

--- a/conference.yml
+++ b/conference.yml
@@ -37,6 +37,13 @@
   venue: Melbourne, Australia
   map: https://goo.gl/maps/48xSZG7HDGv
 
+- meeting: 대한생리학회
+  link: http://2017.koreaphysiology.org/
+  dateFrom: 2017/11/02
+  dateUntil: 2017/11/04
+  venue: 서울의대 융합관
+  map: http://naver.me/xQ3AXaio
+
 - meeting: Cell Symposia:Neuro-Immune Axis
   link: http://cell-symposia.com/neuroimmunology-2017
   dateFrom: 2017/09/17
